# pdf-rag-langchain-gemini

./: 1.0_RAG_PDF.ipynb  README.md  main.py  pyproject.toml
Vectorstore/: chroma.sqlite3
