[project]
name = "ansh-lamba-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "community>=1.0.0b1",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.2.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "protobuf>=6.33.4",
    "pypdf>=6.6.0",
]
